# aoc24

./: README.md  build.gradle.kts  mkdocs.yml  pyproject.toml  settings.gradle.kts  shell.nix
.github/workflows/: ci.yml
day/: __init__.py
docs/: index.md
historian-hysteria/: build.gradle.kts
historian-hysteria/src/main/java/adventofcode/: App.java
historian-hysteria/src/main/java/adventofcode/dayone/: App.java  CLI.java  Interface.java  Utils.java
historian-hysteria/src/main/java/adventofcode/one/: CLI.java  Utils.java
historian-hysteria/src/test/java/adventofcode/: AppTest.java
historian-hysteria/src/test/java/adventofcode/dayone/: AppTest.java  InterfaceTest.java  TestUtils.java
historian-hysteria/src/test/java/adventofcode/one/: TestUtils.java
historian-hysteria/src/test/resources/: sample.txt
